samples/_failures_safe/1761460590_a53fa8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2c0d08f.c: In function ‘main’:
./samples/SAFE/__tmp_c2c0d08f.c:155:18: error: expected ‘)’ at end of input
  155 |     addEdge(graph
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_c2c0d08f.c:155:5: error: too few arguments to function ‘addEdge’
  155 |     addEdge(graph
      |     ^~~~~~~
./samples/SAFE/__tmp_c2c0d08f.c:42:6: note: declared here
   42 | void addEdge(struct Graph* graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_c2c0d08f.c:155:5: error: expected declaration or statement at end of input
  155 |     addEdge(graph
      |     ^~~~~~~
